--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     function DriverMap({ data }) {
       const ref=React.useRef();
       useEffect(()=>{
-        mapboxgl.accessToken = 'pk.eyJ1IjoiZXhsYW1wbGUiLCJhIjoiY2t2bGN5dGF4MDFjdTJvbnh1b2E4Nmw1aSJ9.xxxxxxxxxxxx';
+        mapboxgl.accessToken = 'pk.eyJ1IjoicXdlcnR5MzAwNSIsImEiOiJjbTl6Y3BzZmwwY2toMmtvazhwcnIzcjA2In0.VAzvIhPesFQhfT4jlpLGjw';
         const map = new mapboxgl.Map({
           container: ref.current, style:'mapbox://styles/mapbox/dark-v11',
           center:[69.24,41.31], zoom:8
