--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     // === Замените эти плейсхолдеры на свои реальные значения ===
     const API_BASE_URL        = 'https://eld-platform-production.up.railway.app';
     const WS_URL              = 'wss://eld-platform-production.up.railway.app/ws/eld';
-    const MAPBOX_ACCESS_TOKEN = 'pk.eyJ1IjoicXdlcnR5MzAwNSIsImEiOiJjbTl6Y3BzZmwwY2toMmtvazhwcnIzcjA2In0.VAzvIhPesFQhfT4jlpLGjw';
+    const MAPBOX_ACCESS_TOKEN = 'pk.eyJ1IjoicXdlcnR5MzAwNSIsImEiOiJjbTl6c3E4dG0wMDlnMmtzYWdwa3FrMnBwIn0.beLU1aPC16uBZUkSFDnU8Q';
 
     const { useState, useEffect, useRef } = React;
     const {
